DPRO-1535 - Correct sup alignment

--- a/src/main/webapp/WEB-INF/themes/desktop/sass/_variables.scss
+++ b/src/main/webapp/WEB-INF/themes/desktop/sass/_variables.scss
@@ -187,7 +187,8 @@ $txt-size-h5: $txt-size-default; // may not use
 $txt-size-h6: $txt-size-default; // may not use
 $txt-size-note: $txt-size-small;
 
-$sub-sup-alignment: .5ex; //controls sub and super text
+$sub-alignment: .5ex; //controls sub and super text
+$sup-alignment: 1ex; //controls sub and super text
 
 $line-height: 18px; // applies to parapgraphs and lists by default
 $line-height-large: ($line-height * 2);
